remove unused JavaDoc build options